# obs-backgroundremoval

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.new.txt  CMakePresets.json  LICENSE  README.md  buildspec.json  patch_libobs.diff
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/build-plugin/: action.yml
.github/actions/prebuild-dependencies/: action.yml
.github/actions/winget-update/: action.yaml
.github/scripts/: .Aptfile  .Brewfile  .Brewfile.lock.json  .package.zsh  Build-Windows.ps1  Package-Windows.ps1
.github/scripts/utils.zsh/: check_macos  setup_ccache  setup_linux
.github/workflows/: build-project.yaml  cmake.yml  docker.yml  flatpak.yml  main.yml  pages.yaml  push.yaml  stale.yml  winget-update.yaml
build-aux/: .run-format.zsh  run-cmake-format
ci/flatpak/: com.obsproject.Studio.Plugin.Backgroundremoval.metainfo.xml  com.obsproject.Studio.Plugin.Backgroundremoval.yaml  com.obsproject.Studio.Plugin.backgroundremoval.metainfo.xml  com.obsproject.Studio.Plugin.backgroundremoval.yaml  flathub.json
cmake/: BuildAWSSDK.cmake  BuildMyCurl.cmake  BuildMyOnnxruntime.cmake  BuildMyOpenCV.cmake  FetchOnnxruntime.cmake  FetchOpenCV.cmake  FindOnnxruntime.cmake  MunkeiVersionFromGit.cmake  ObsPluginHelpers.cmake  onnxruntime-v1.14.1.patch
cmake/bundle/macos/: Distribution.xml
cmake/bundle/macos/scripts/: postinstall
cmake/bundle/windows/: installer-Windows.iss.in
cmake/common/: buildspec_common.cmake  compiler_common.cmake
cmake/linux/: defaults.cmake
cmake/macos/: xcode.cmake
cmake/macos/resources/: Distribution.xml  Distribution.xml.in  create-package.cmake.in
cmake/macos/resources/scripts/: postinstall
cmake/windows/: compilerconfig.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/: SINet_Softmax.onnx  SINet_Softmax_simple.onnx  config.json  mediapipe.onnx  selfie_segmentation.onnx
data/effects/: blend_images.effect  kawase_blur.effect  mask_alpha_filter.effect
data/locale/: ar-EG.ini  bn-IN.ini  en-US.ini  es-SP.ini  fr-FR.ini  hi-IN.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  pt-BR.ini  ru-RU.ini  ta-IN.ini  tr-TR.ini  zh-CN.ini
data/models/: DCE_net.onnx  mediapipe.onnx  semantic_guided_llie_180x324.onnx  tbefn_fp32.onnx  tcmonodepth_tcsmallnet_192x320.onnx  uretinex_net_180x320.onnx  zero_dce_180x320.onnx
docs/: BUG-REPORTING.md  BUILDING-FEDORA-37.md  BUILDING-FEDORA.md  BUILDING-OPENSUSE.md  BUILDING-ROCM-UBUNTU.md  UNINSTALL.md
installer/: installer-Windows.iss.in
pages/: package-lock.json  package.json  svelte.config.js
pages/src/lib/: github-release.ts
pages/src/routes/: +layout.svelte  +page.svelte  Header.svelte
pages/src/routes/arch/: +page.svelte
pages/src/routes/fedora/: +page.svelte
pages/src/routes/flatpak/: +page.svelte
pages/src/routes/macos/: +page.svelte
pages/src/routes/opensuse-tumbleweed/: +page.svelte
pages/src/routes/ubuntu/: +page.server.ts  +page.svelte
pages/src/routes/usage/: +page.svelte
pages/src/routes/windows/: +page.svelte
scripts/: .gitignore  PKGBUILD  makeOnnxruntime_osx.sh  makeOpenCV_osx.sh  obs-backgroundremoval-0.2beta-1-x86_64.pkg.tar.zst
src/: FacePoseSegmentation.mm  FacePoseSegmentation.swift  FilterData.h  Model.h  VisionSegmentation.h  VisionSegmentation.mm  VisionSegmentation.swift  background-filter-info.c  background-filter.cpp  background-filter.h  background-mask-source-info.c  background-mask-source.cpp  background-mask-source.h  consts.h  enhance-filter-info.c  enhance-filter.cpp  enhance-filter.h  magic-eraser-filter-info.c  magic-eraser-filter.cpp  magic-eraser-filter.h  onnxruntime_float16.h  plugin-macros.generated.h  plugin-macros.h.in  plugin-main.c  plugin-main.cpp  plugin-support.c.in  plugin-support.h  stb_image.h
src/mask-editor/: MaskEditorDialog.cpp  MaskEditorDialog.hpp
src/models/: Model.h  ModelMODNET.h  ModelMediapipe.h  ModelPPHumanSeg.h  ModelRMBG.h  ModelRVM.h  ModelSINET.h  ModelSelfie.h  ModelTBEFN.h  ModelTCMonoDepth.h  ModelURetinex.h  ModelZeroDCE.h
src/obs-utils/: obs-config-utils.cpp  obs-config-utils.h  obs-utils.cpp  obs-utils.h
src/ort-utils/: ORTModelData.h  ort-session-utils.cpp  ort-session-utils.h
src/segment-tracing/: SegmentTracingDialog.cpp  SegmentTracingDialog.h  segment-tracing-credentials.h.in  segment-tracing.cpp  segment-tracing.h
src/update-checker/: Client.hpp  UpdateDialog.cpp  UpdateDialog.hpp  github-utils.cpp  github-utils.h  update-checker.cpp  update-checker.h
src/update-checker/CurlClient/: CMakeLists.txt  CurlClient.cpp
src/update-checker/URLSessionClient/: CMakeLists.txt  URLSessionClient.mm
src/update-checker/WinRTHttpClient/: CMakeLists.txt  WinRTHttpClient.cpp
